# markdown_extractor

./: .gitignore  README.md  pyproject.toml  test_version.py
data/: 13529199_prapti_haskos.md  test_code.md
hands_on/: hello.ipynb  use_case_MarkdownDocuemnt.py  use_case_analyse.py  use_case_count_characters.py  use_case_count_elements.py  use_case_count_words.py  use_case_identify_blockquotes.py  use_case_identify_code_blocks.py  use_case_identify_footnotes.py  use_case_identify_headers.py  use_case_identify_html_blocks.py  use_case_identify_html_inline.py  use_case_identify_links.py  use_case_identify_lists.py  use_case_identify_paragraphs.py  use_case_identify_sections.py  use_case_identify_tables.py  use_case_identify_todos.py  use_case_init.py
markdown_analyzer_lib/: __init__.py  markdown_analyzer.py
tests/: test_markdown_analyzer.py
