[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-analyzer-lib"
version = "0.1.1"
authors = [
  { name="RAFIK", email="rafiqulislam.mca18.du@gmail.com" },
  { name="Parmeesh Singh", email="parmeesh.singh.2580@gmail.com"},
  { name="Tushar Sirohi", email="tushar.sirohi21@gmail.com"}
]
description = "A Python library for parsing, analyzing, and converting Markdown and MDX documents, and converting websites to Markdown."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    # "License :: OSI Approved :: MIT License", # Assuming MIT, can be changed
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "markdownify",
]

[project.urls]
Homepage = "https://github.com/yourusername/markdown-analyzer-lib" # Placeholder
"Bug Tracker" = "https://github.com/yourusername/markdown-analyzer-lib/issues" # Placeholder

[tool.setuptools.packages.find]
where = ["."]
include = ["markdown_analyzer_lib*"]
exclude = ["data*", "hands_on*", "tests*"]

# [project.scripts]
